# rust-cpu-endian

./: Cargo.toml  README.md  build.rs
c_src/: native_endian.cpp
docs/: search-index.js  settings.html  source-files.js
docs/cpu_endian/: all.html  enum.Endian.html  fn.working.html  index.html  sidebar-items.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/cpu_endian/: lib.rs.html
src/: lib.rs
