[package]
name = "cpu-endian"
version = "0.1.1"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = """
`cpu-endian` is a portable crate to detect CPU byte order.

It detects how CPU native scalar type is ordered; little-endian or big-endian, or something else (like PDP-endian, mixed-endian, middle-endian, and so on.)
"""

readme = "README.md"
keywords = ["endian", "byte-order", "little-endian", "big-endian"]
documentation = "https://wbcchsyn.github.io/rust-cpu-endian/cpu_endian/index.html"

license = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause OR MIT"

repository = "https://github.com/wbcchsyn/rust-cpu-endian.git"
categories = ["os"]

[dependencies]

[build-dependencies]
cc = "1.0"
